--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "three": "^0.150.1",
     "vanta": "^0.5.24"
   },
