--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
+    "react-scroll-parallax": "^3.3.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "three": "^0.150.1",
